[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/textures/backgrounds/forest.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/enemy_panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/the_wild_breath_of_zelda.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/character_panel.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/Battle.gd" type="Script" id=10]
[ext_resource path="res://assets/textures/icons/sword_attack.png" type="Texture" id=11]

[sub_resource type="GradientTexture" id=1]

[sub_resource type="DynamicFont" id=2]
size = 56
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 31
font_data = ExtResource( 3 )

[node name="Battle" type="Control"]
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackBackground" type="TextureRect" parent="."]
margin_right = 720.0
margin_bottom = 1078.0
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopScreen" type="Control" parent="."]
margin_right = 720.0
margin_bottom = 818.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="TopScreen"]
margin_right = 720.0
margin_bottom = 818.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YBotLine" type="Line2D" parent="TopScreen/Background"]
position = Vector2( 10, 70 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="AreaTitle" type="Control" parent="TopScreen"]
margin_right = 720.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseLine" type="Line2D" parent="TopScreen/AreaTitle"]
position = Vector2( 10, 10 )
points = PoolVector2Array( -10, 51, 710, 51 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="Name" type="Label" parent="TopScreen/AreaTitle"]
margin_right = 720.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
text = "Wild Forest"
align = 1
valign = 2
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayArea" type="MarginContainer" parent="TopScreen"]
margin_left = 10.0
margin_top = 72.0
margin_right = 710.0
margin_bottom = 808.0
rect_min_size = Vector2( 700, 684 )
size_flags_horizontal = 12
size_flags_vertical = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleBoard" type="GridContainer" parent="TopScreen/DisplayArea"]
margin_right = 700.0
margin_bottom = 736.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 10
columns = 2

[node name="AllFriendlies" type="GridContainer" parent="TopScreen/DisplayArea/BattleBoard"]
margin_right = 345.0
margin_bottom = 732.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 57
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Friendly" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies" instance=ExtResource( 6 )]
margin_bottom = 243.0

[node name="Friendly2" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies" instance=ExtResource( 6 )]
margin_left = 201.0
margin_right = 345.0
margin_bottom = 243.0

[node name="Friendly3" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies" instance=ExtResource( 6 )]
margin_top = 243.0
margin_bottom = 486.0

[node name="Friendly4" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies" instance=ExtResource( 6 )]
margin_left = 201.0
margin_top = 243.0
margin_right = 345.0
margin_bottom = 486.0

[node name="Friendly5" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies" instance=ExtResource( 6 )]
margin_top = 486.0
margin_bottom = 729.0

[node name="Friendly6" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies" instance=ExtResource( 6 )]
margin_left = 201.0
margin_top = 486.0
margin_right = 345.0
margin_bottom = 729.0

[node name="AllEnemies" type="GridContainer" parent="TopScreen/DisplayArea/BattleBoard"]
margin_left = 355.0
margin_right = 700.0
margin_bottom = 732.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 57
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies" instance=ExtResource( 2 )]
margin_bottom = 243.0

[node name="Enemy2" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies" instance=ExtResource( 2 )]
margin_left = 201.0
margin_right = 345.0
margin_bottom = 243.0

[node name="Enemy3" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies" instance=ExtResource( 2 )]
margin_top = 243.0
margin_bottom = 486.0

[node name="Enemy4" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies" instance=ExtResource( 2 )]
margin_left = 201.0
margin_top = 243.0
margin_right = 345.0
margin_bottom = 486.0

[node name="Enemy5" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies" instance=ExtResource( 2 )]
margin_top = 486.0
margin_bottom = 729.0

[node name="Enemy6" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies" instance=ExtResource( 2 )]
margin_left = 201.0
margin_top = 486.0
margin_right = 345.0
margin_bottom = 729.0

[node name="MidLine" type="Line2D" parent="TopScreen/DisplayArea/BattleBoard"]
points = PoolVector2Array( 350, -10, 350, 746 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="Attack" type="GridContainer" parent="TopScreen/DisplayArea"]
visible = false
margin_right = 700.0
margin_bottom = 736.0
size_flags_horizontal = 3

[node name="AttackList" type="ScrollContainer" parent="TopScreen/DisplayArea/Attack"]
margin_right = 700.0
margin_bottom = 585.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Items" type="VBoxContainer" parent="TopScreen/DisplayArea/Attack/AttackList"]
margin_right = 700.0
margin_bottom = 585.0
rect_min_size = Vector2( 0, 585 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Item" type="HBoxContainer" parent="TopScreen/DisplayArea/Attack/AttackList/Items"]
margin_right = 700.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="Picture" type="TextureRect" parent="TopScreen/DisplayArea/Attack/AttackList/Items/Item"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="TopScreen/DisplayArea/Attack/AttackList/Items/Item"]
margin_left = 104.0
margin_right = 621.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "Attack name: Strike
HP damage: 25
AP Cost: 1"
valign = 1
uppercase = true

[node name="Use" type="Button" parent="TopScreen/DisplayArea/Attack/AttackList/Items/Item"]
margin_left = 625.0
margin_top = 25.0
margin_right = 700.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 50 )
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "USE"

[node name="BackButton" type="Button" parent="TopScreen/DisplayArea/Attack"]
margin_top = 589.0
margin_right = 700.0
margin_bottom = 684.0
rect_min_size = Vector2( 700, 95 )
custom_fonts/font = SubResource( 5 )
text = "BACK"

[node name="Controls" type="Control" parent="."]
margin_top = 818.0
margin_right = 720.0
margin_bottom = 946.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Controls"]
margin_left = 10.0
margin_top = 10.0
margin_right = 710.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowerButtons" type="GridContainer" parent="Controls/MarginContainer"]
margin_right = 700.0
margin_bottom = 108.0
size_flags_stretch_ratio = 0.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Button" parent="Controls/MarginContainer/LowerButtons"]
margin_right = 345.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "ATTACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Button" parent="Controls/MarginContainer/LowerButtons"]
margin_left = 355.0
margin_right = 700.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "ITEMS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Abilities" type="Button" parent="Controls/MarginContainer/LowerButtons"]
margin_top = 59.0
margin_right = 345.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "ABILITIES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retreat" type="Button" parent="Controls/MarginContainer/LowerButtons"]
margin_left = 355.0
margin_top = 59.0
margin_right = 700.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "RETREAT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleText" type="RichTextLabel" parent="."]
margin_top = 946.0
margin_right = 720.0
margin_bottom = 1078.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 0, 0.811765, 1, 1 )
text = "Alrune Hit Grand Wolf for 25 damage with Strike
Grand Wolf Bit Alrune for 15 Damage
Alrune heals for 20 HP
Grand Hound Has Died"
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TopScreen/DisplayArea/Attack/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Controls/MarginContainer/LowerButtons/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="Controls/MarginContainer/LowerButtons/Items" to="." method="_on_Items_pressed"]
[connection signal="pressed" from="Controls/MarginContainer/LowerButtons/Abilities" to="." method="_on_Abilities_pressed"]
[connection signal="pressed" from="Controls/MarginContainer/LowerButtons/Retreat" to="." method="_on_Retreat_pressed"]
